2005-11-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/hiki.conf: add descriptions by Atsushi SHICHI.
	* doc/README-attach.txt: update a document by Atsushi SHICHI.

2005-11-07  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb (getAmazon): revise for recent amazon sites.

2005-11-03  Kouhei Yanagita <yanagi@shakenbu.org>
	* plugin/01sp.rb, misc/plugin/show_plugins.rb: new plugin.
	It displays enabled plugins.

2005-11-02  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/command.rb (cmd_save): editors can delete pages without
	administrative privilege.

2005-11-01  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/db/flatfile.rb (unlink): backup the data when a page is deleted.

2005-10-25  Kouhei Yanagita <yanagi@shakenbu.org>
	* style/rd+/rd2html.rb (a_name_href): fixed a escape string
	remaining bug (patch by Masao Mutoh).

2005-10-19  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/repos/plain.rb, test/test_repos_plain.rb,
	misc/hikifarm/hikifarm.conf: add a new version control backend,
	which stores whole copy of each version.

2005-10-15  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>
	* hiki/xmlrpc.rb: keyword bug fix.
	use XMLRPC::FaultException instead of rescue and false.
	support minoredit and md5hex. split XMLRPCHandler.

2005-10-03  Kouhei Yanagita <yanagi@shakenbu.org>
	* hiki/plugin.rb: use *_proc methods regardless of
	the value of @conf.use_plugin.

2005-10-02  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: sync with hikidoc rev.33.
	  revise esacpes in parse_link
	  allow empty descriptions in definition lists
	* style/default/html_formatter.rb (replace_link): follow the
	change of hikidoc.rb.

2005-09-30  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/hiki_formatter.rb (apply_tdiary_theme): revise
	H2_RE (reported by NISHI Takao).

	* misc/plugin/attach.rb, misc/plugin/category.rb,
	misc/plugin/keyword.rb, misc/plugin/orphan.rb,
	misc/plugin/referer.rb, misc/plugin/sitemap.rb,
	misc/plugin/template.rb, plugin/00default.rb,